--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.profiles.active=es
+guru.username=John
+guru.password=somepass
+guru.dburl=ssassafrass
+guru.jms.username=JMS Username
+guru.jms.password=somepass
+guru.jms.url=SomeURL
